--- a/package.json
+++ b/package.json
@@ -27,16 +27,8 @@
   "devDependencies": {
     "classnames": "^2.2.5",
     "enzyme": "^2.7.1",
-    "eslint": "^3.16.1",
-    "eslint-config-airbnb": "^14.1.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "^6.10.0",
-    "node-sass": "^3.8.0",
-    "prettier": "0.22.0",
     "react-addons-test-utils": "^15.4.2",
-    "react-scripts": "0.9.2",
-    "sass-loader": "^4.0.0"
+    "react-scripts": "0.9.2"
   },
   "dependencies": {
     "classnames": "^2.2.5",
