renamed App.jsx to Project.jsx in prettier ignore to keep the bad format on purpose

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,2 +1,2 @@
 # Ignore the bad file from the folder "1-readable" so people can see the effects of bad formatting
-src/1-readable/bad/App.jsx
+src/1-readable/bad/Project.jsx
